conv-app-deployment.yml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: conv-app-deployment
  spec:
    selector:
      matchLabels:
        app: conv-app
    template:
      metadata:
        labels:
          app: conv-app
      spec:
        containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
          ports:
          - containerPort: 80
