conv-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv-service
  template:
    metadata:
      labels:
        app: conv-service
    spec:
      containers:
      - name: conv-service
        image: antonlarichev/conv-service:1.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
