conv-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  selector:
    app: conv-api
  ports:
  - port: 3000
    protocol: TCP
