conv-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  selector:
    app: conv-service
  ports:
  - port: 3000
    protocol: TCP
